# robotsix-calendar-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  coverage.xml  data.json  docker-compose.yml  healthcheck.py  index.html  mkdocs.yml  modules.yaml  objects.inv  pyproject.toml  vulture_whitelist.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  config-schema-drift.yml  dependabot-auto-merge.yml  deps-bump.yml  docker-publish.yml  docs.yml  lint-workflows.yml  pre-commit-ci.yml  release.yml  scan-container.yml  scorecard.yml
.robotsix-mill/: config.yaml
.robotsix-mill/boilerplate/: auto-approve-boilerplate.md  auto-approve-reject-boilerplate.md  doc-classifier-boilerplate.md  doc-recommendation-only-boilerplate.md  maintenance-triage-boilerplate.md  mechanical-fastpath-boilerplate.md  triage-skip-boilerplate.md
config/: config.json  config.schema.json
configuration/: index.html
docs/: configuration.md  index.md  modules.yaml
docs/agent/: reference.md
docs/agent/tutorials/: manage-events.md
docs/caldav_client/: reference.md
docs/intent_parser/: reference.md
docs/reference/: add_to_calendar_handler.md  brokered_entrypoint.md  component_agent.md  entrypoint.md  healthcheck.md  index.md  logging_config.md
docs/settings/: reference.md
docs/tutorials/: index.md
docs/tutorials/basic/: first-agent.md  manage-events.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2d7c1ed7505ed5bf___init___py.html  z_2d7c1ed7505ed5bf__shared_py.html  z_2d7c1ed7505ed5bf_calendar_ops_py.html  z_2d7c1ed7505ed5bf_contact_ops_py.html  z_2d7c1ed7505ed5bf_exceptions_py.html  z_2d7c1ed7505ed5bf_task_ops_py.html  z_4c0c8897a0fb8f15___init___py.html  z_4c0c8897a0fb8f15_config_contract_py.html  z_4c0c8897a0fb8f15_settings_py.html  z_56527b2f4d63a314___init___py.html  z_56527b2f4d63a314___main___py.html  z_56527b2f4d63a314_add_to_calendar_handler_py.html  z_56527b2f4d63a314_agent_py.html  z_56527b2f4d63a314_brokered_entrypoint_py.html  z_56527b2f4d63a314_caldav_client_py.html  z_56527b2f4d63a314_entrypoint_py.html  z_56527b2f4d63a314_healthcheck_py.html  z_56527b2f4d63a314_intent_parser_py.html  z_56527b2f4d63a314_logging_config_py.html  z_56527b2f4d63a314_settings_py.html
reference/: index.html
reference/add_to_calendar_handler/: index.html
reference/agent/: index.html
reference/brokered_entrypoint/: index.html
reference/caldav_client/: index.html
reference/component_agent/: index.html
reference/intent_parser/: index.html
reference/logging_config/: index.html
reference/settings/: index.html
search/: search_index.json
src/robotsix_calendar_agent/: __init__.py  __main__.py  add_to_calendar_handler.py  agent.py  brokered_entrypoint.py  caldav_client.py  dispatch.py  entrypoint.py  healthcheck.py  intent_parser.py  logging_config.py  settings.py
src/robotsix_calendar_agent/caldav_client/: __init__.py  _shared.py  calendar_ops.py  contact_ops.py  exceptions.py  task_ops.py
src/robotsix_calendar_agent/component_agent/: __init__.py  config_contract.py  responder.py  settings.py
tests/: caldav_test_server.py  conftest.py  strategies.py  test_add_to_calendar_handler.py  test_agent.py  test_brokered_entrypoint.py  test_caldav_client.py  test_caldav_integration.py  test_intent_parser.py  test_logging_config.py  test_settings.py  test_smoke.py
tests/add_to_calendar_handler/: test_add_to_calendar_handler.py
tests/agent/: test_agent.py
tests/brokered_entrypoint/: test_brokered_entrypoint.py
tests/caldav_client/: conftest.py  test_caldav_client.py  test_calendar_ops.py  test_contact_ops.py  test_exceptions.py  test_hypothesis_roundtrip.py  test_shared.py  test_task_ops.py
tests/component_agent/: __init__.py  test_config_contract.py  test_responder.py
tests/entrypoint/: test_entrypoint.py
tests/healthcheck/: conftest.py  test_healthcheck.py
tests/intent_parser/: test_intent_parser.py  test_intent_parser_contract.py
tests/logging_config/: test_logging_config.py
tests/settings/: test_settings.py
tutorials/: index.html
tutorials/basic/first-agent/: index.html
tutorials/basic/manage-events/: index.html
