[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-calendar-agent"
version = "0.1.0"
description = "Agent-comm calendar and contacts agent for Radicale"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Damien Robotsix", email = "damien.robotsix@gmail.com" }]
dependencies = [
    "robotsix-agent-comm",
    # The intent parser uses llmio's default provider (openrouter-deepseek);
    # the provider extra must be installed or get_provider() raises ImportError.
    "robotsix-llmio[openrouter-deepseek]",
    "caldav",
    # caldav 2.0 dropped vobject as an official dependency, but the client
    # wrapper reads results via ``obj.vobject_instance``; install it explicitly
    # so event/contact read-back works (otherwise vobject_instance is None).
    "vobject",
    "pydantic",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.scripts]
calendar-agent = "robotsix_calendar_agent.brokered_entrypoint:main"

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-calendar-agent"
Repository = "https://github.com/damien-robotsix/robotsix-calendar-agent"
Issues = "https://github.com/damien-robotsix/robotsix-calendar-agent/issues"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "vulture",
    "radicale",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.uv.sources]
robotsix-agent-comm = { git = "https://github.com/damien-robotsix/robotsix-agent-comm.git", rev = "e65da0eafc49ec6dcfb895e5de431ce8f1b171bc" }
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "b23b8297a19726a57e94dd652c4e1e5ee4f0fb14" }

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_calendar_agent"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"vulture_whitelist.py" = ["B018", "F821"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.deptry.per_rule_ignores]
# vobject is a runtime requirement of caldav 2.0 (read back via
# obj.vobject_instance); it is never imported directly in our code.
DEP002 = ["vobject"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib",
    "error",
]
markers = ["integration: Slower tests requiring a live Radicale server"]

[tool.coverage.run]
source = ["robotsix_calendar_agent"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
