[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-calendar-agent"
version = "0.1.0"
description = "Calendar and contacts agent for Radicale"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Damien Robotsix", email = "damien.robotsix@gmail.com" }]
dependencies = [
    # The intent parser uses llmio's default provider (openrouter); the
    # provider extra must be installed or get_provider() raises ImportError. The
    # tracing extra pulls the OpenTelemetry/OTLP deps setup_langfuse_tracing()
    # needs to export intent-parse traces to Langfuse.
    "robotsix-llmio[openrouter,tracing]",
    "caldav",
    "pydantic",
    "pydantic-settings",
    "tenacity>=9.0,<10",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.scripts]
calendar-agent = "robotsix_calendar_agent.entrypoint:main"
calendar-agent-healthcheck = "robotsix_calendar_agent.healthcheck:main"

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-calendar-agent"
Repository = "https://github.com/damien-robotsix/robotsix-calendar-agent"
Issues = "https://github.com/damien-robotsix/robotsix-calendar-agent/issues"

[dependency-groups]
dev = [
    "commitizen>=4,<5",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "vulture",
    "radicale",
    "hypothesis>=6.155.2",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "griffe-pydantic",
]

[tool.uv.sources]
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "73f2d555caa21de47a3732824d776e04719b3011" }  # pragma: allowlist secret

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_calendar_agent"]

[tool.deptry]
known_first_party = ["robotsix_calendar_agent"]

[tool.deptry.per_rule_ignores]
DEP003 = ["opentelemetry"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S", "T10", "EXE"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/robotsix_calendar_agent/healthcheck.py" = ["T201"]
"vulture_whitelist.py" = ["B018", "F821"]
"tests/**/*.py" = ["S105", "S106", "S603"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["vulture_whitelist.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib",
    "error",
]
markers = ["integration: Slower tests requiring a live Radicale server"]

[tool.coverage.run]
source = ["robotsix_calendar_agent"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 85
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/robotsix_calendar_agent/__init__.py",
]
update_changelog_on_bump = true
changelog_incremental = true
tag_format = "v$version"
